added project and updated text

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
       <div>
         <h2 id=About>About Me</h2>
         <br>
-        <p>Paragraph about me</p>
+        <p>Hi! I'm a full stack web developer and engineer with background in Project management and IT.</p>
+        <br>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quam
-          nulla accusamus. Fugit commodi dolorem odit tempora dolor eius totam,
-          repellat optio provident facere animi eos veniam eligendi adipisci
-          aperiam.
+        Welcome to my portfolio page! I have always been interested in technology and have years of experience in the tech industry where
+        I have implemented numerous SaaS technologies. I am constantly working on expanding and deepening my knowledge.
+        I have used my expertise in JavaScript, CSS, Bootstrap, mySQL, Git, Heroku, Google Cloud Services and MERN Stack to create the projects listed here.
         </p>
         <br>
     
       </div>
       <h2 id=Work>My Work</h2>
-        <p>You can see some of my projects here</p>
+        <p>You can see some of my projects here. Click on the images to see and try out the deployed apps.</p>
       <!-- Section Work -->
       <div class="bigProject">
         <section class="card">
@@ -68,14 +68,14 @@
 
         <div class="fluid">
           <section class="card">
-          <header>Future project 3</header>
-          <a href="ttps://www.google.com"><img src="images/06-placeholder.jpg" alt="Placeholder 3"/></a>
-          <p>Lorem ipsum, dolor sit</p>
+          <header>FoodyMoody web app</header>
+          <a href="https://boocipher.github.io/MoodyFoody/index.html"><img src="./images/06-MoodyFoody.gif" alt="GIF for MoodyFoody web application"/></a>
+          <p>Easy to use and lightweight web app that helps the user choose a restaurant based on their preferences</p>
         </section>
         <section class="card">
-          <header>SEO Project</header>
+          <header>SEO Company Landing page</header>
           <a href="https://boocipher.github.io/Horiseon_refactor/"><img id="GIF" src="images/07-Horiseon_web.gif" alt="Placeholder 3"/></a>
-          <p>Lorem ipsum, dolor sit</p>
+          <p>A landing page for a marketing company with quick links to key sections</p>
         </section>
         </div>
       </div>
@@ -89,7 +89,7 @@
         <p>
         <ul>
           <li><strong>Email:</strong> <a href="#">myEmail@gmail.com</a></li>
-          <li><strong>Github:</strong> <a href="#">myGitHubPage</a></li>
+          <li><strong>GitHub:</strong> <a href="#">myGitHubPage</a></li>
           <li><strong>LinkedIn:</strong> <a href="#">myLinkedInProfile</a></li></li>
         </ul>
       </p>
