Updates Project 2 placeholder

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
           <p>Lorem ipsum, dolor sit</p>
         </section>
         <section class="card">
-          <header>Future project 2</header>
-          <a href="https://www.google.com"><img src="images/05-placeholder.png" alt="Placeholder 2"/></a>
-          <p>Lorem ipsum, dolor sit</p>
+          <header>Garden Proud</header>
+          <a href="https://garden-proud-2022.herokuapp.com/"><img src="images/05-GardenProud-Home.png" alt="GardenProud main page image"/></a>
+          <p>Garden Proud is a full-stack app for gardening enthusiasts! Users have their own "gardens" on their profile that they can add plants and flowers to.</p>
         </section>
         </div>
 
